syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service SendRequestToClient {
  // Sends a greeting
  rpc BidirectionalStream(HelloRequest) returns (HelloReply);
}
// The first request service 2 to service 1
service ValidService2 {
    rpc FirstRequestService2(Service2SendData) returns (Empty);
}
// Subsequent service2 requests to service1
service SendRequestService2 {
    rpc RequestService2(Empty) returns (DataService1ToServic2);
}

// Subsequent service1 requests to service2
service SendRequestService1 {
    rpc RequestService1(DataService2ToServic1) returns (HelloReply);
}

message Service2SendData{
    string id = 1;
    string type = 2;
}
message DataService1ToServic2{
    int32 id = 123;
    string sender = 1234;
    string message = 10;
}

message DataService2ToServic1{
    int32 id = 123;
    string engine = 1234;
    string MessageLenght = 10;
    bool isValid = 1;
}

// The request message containing the user's name.
message HelloRequest {
   string message = 1;

}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message Empty {}